frontend: Fix MiniPlayer overflowing

--- a/frontend/src/components/drawer.scss
+++ b/frontend/src/components/drawer.scss
@@ -9,6 +9,11 @@
   align-items: center;
   transition: height 0.25s ease-out;
 
+  & > .mini-player {
+    flex-grow: 1;
+    margin: 0 0.5rem 0 0.25rem;
+  }
+
   &--open {
     height: 100%;
     flex-direction: column;
